# EpicGamesScrapperBackend

./: DB.py  copy.txt  main.py  model.py  pyproject.toml  requirements.txt  schemas.py  services.py
